// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayRadio should render a checked and disabled radio 1`] = `
<div class="custom-control custom-radio">
  <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a checked radio 1`] = `
<div class="custom-control custom-radio">
  <input checked="" class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a disabled radio 1`] = `
<div class="custom-control custom-radio">
  <input disabled="disabled" class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with classes 1`] = `
<div class="custom-control custom-radio my-custom-class">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with custom label content 1`] = `
<div class="custom-control custom-radio">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <div>
      <p>My Radio</p>
    </div>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with hidden label 1`] = `
<div class="custom-control custom-radio">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text sr-only">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with id 1`] = `
<div class="custom-control custom-radio" id="myId">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with name 1`] = `
<div class="custom-control custom-radio">
  <input class="custom-control-input" name="myradio" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with value 1`] = `
<div class="custom-control custom-radio">
  <input class="custom-control-input" value="myradio" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render an inline radio 1`] = `
<div class="custom-control custom-radio custom-control-inline">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render default markup 1`] = `
<div class="custom-control custom-radio">
  <input class="custom-control-input" ref="input" type="radio" role="radio">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Radio</span>
  </label>
</div>
`;
